8230646: Epsilon does not extend TLABs to max size

Reviewed-by: tschatzl, zgu